force-app/main/default/objects/Contact/fields/Daily_Wage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Wage_Rate__c</fullName>
    <label>Daily Wage Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>