force-app/main/default/objects/Contact/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planting</fullName>
            </value>
            <value>
                <fullName>Irrigation Management</fullName>
            </value>
            <value>
                <fullName>Pruning</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Harvesting</fullName>
            </value>
            <value>
                <fullName>Weeding</fullName>
            </value>
            <value>
                <fullName>Equipment Operation</fullName>
            </value>
            <value>
                <fullName>Tractor Driving</fullName>
            </value>
            <value>
                <fullName>General Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>