force-app/main/default/objects/Contact/fields/Worker_Type__c.field-meta.xml
<CustomField>
    <fullName>Worker_Type__c</fullName>
    <label>Worker Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Farm Manager</fullName>
            </value>
            <value>
                <fullName>Permanent Worker</fullName>
            </value>
            <value>
                <fullName>Daily Wage Worker</fullName>
            </value>
            <value>
                <fullName>Seasonal Worker</fullName>
            </value>
            <value>
                <fullName>Specialist (Pruning, etc.)</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>